--- a/public/stylesheets/signup.css
+++ b/public/stylesheets/signup.css
@@ -228,7 +228,8 @@ body {
         text-align: center;
         left: 0;
         padding: 1em 4em;
-        margin-left: 1em;
+        margin-left: 0em;
+        margin-bottom: 7em;
     }
 
     .collapse.show {
